# lambda-kernculus

./: .gitignore  Dockerfile  README.md  kernculus.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: main.yml
docs/: index.md  lambda.md  main.md
lambda-kernculus/: __main__.py  lc.hy
lambda-kernculus/lambda-calculus/: kernel.json
